--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Codesplanation is a platform designed to facilitate clear, concise explanations of code snippets, segments and blocks for all developers, regardless of level"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>codesplanation</title>
+    <title>Codesplanation</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
