FEATURE: Adding left prop to Dropdown

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      property="og:image"
+      content="https://www.incimages.com/uploaded_files/image/1024x576/software-computer-code-1940x900_35196.jpg"
+    />
+    <meta
+      property="og:description"
+      content="Codesplanation is a platform designed to facilitate clear, concise explanations of code snippets, segments and blocks for all developers, regardless of level"
+    />
+    <meta property="og:url" content="http://codesplanation.com" />
+    <meta property="og:title" content="Codesplantion" />
+    <meta
       name="description"
       content="Codesplanation is a platform designed to facilitate clear, concise explanations of code snippets, segments and blocks for all developers, regardless of level"
     />
